# gsc_backend

./: .dockerignore  .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  client.py  forms.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_attachment_options_alter_attachment_account_and_more.py  0003_account_degree.py  0004_remove_attachment_grade_account_duolingo_grade_and_more.py  0005_alter_account_degree.py  0006_attachment_application.py  0007_alter_attachment_meta.py  0008_alter_attachment_unique_together.py  0009_alter_account_city_alter_account_country_and_more.py  0010_alter_attachment_name.py  0011_alter_account_duolingo_grade_and_more.py  0012_alter_account_is_active.py
applications/: admin.py  constants.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0002_rename_education_place_application_program.py  0003_alter_application_name.py  0004_remove_application_attachments.py  0005_comment.py  0006_alter_comment_content.py  0007_application_comment_delete_comment.py  (+3 more)
common/: admin.py  constants.py  exceptions.py  filters.py  forms.py  models.py  resources.py  serializers.py  services.py  signals.py  urls.py  views.py
gsc_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
notifications/: constants.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
wishlist/: models.py  serializers.py  urls.py  views.py
(+32 files in other folders)
