[tool.poetry]
name = "gsc_backend"
version = "0.1.0"
description = ""
authors = ["KairzhanovMurat <murat99010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.28.0"
django-filter = "^24.3"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
django-redis = "^5.4.0"
redis = "^5.2.1"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-celery-results = "^2.5.1"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
django-storages = {extras = ["s3"], version = "^1.14.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
